tests/parser/positive/precedence.nv
fn main() : void {
    1 + 2 * 3;
    return;
}
