tests/parser/negative/incomplete_binary_expr.nv
fn main() : void {
    1 + ;
    return;
}
